<resources>
    <string name="app_name">My Energy</string>
    <string name="settings">Settings</string>
    <string name="real_time">Real Time</string>
    <string name="history">History</string>
    <string name="updated">Updated: %1$s</string>
    <string name="day">Day</string>
    <string name="month">Month</string>
    <string name="year">Year</string>
    <string name="dayily">Dayily</string>
    <string name="monthly">Monthly</string>
    <string name="annually">Annually</string>
    <string name="ok">OK</string>
    <string name="cancel">Cancel</string>
    <string name="select_dates">Select Dates</string>
    <string name="start_date">Start Date</string>
    <string name="end_date">End Date</string>
    <string name="ready">Ready</string>
    <string name="done">Done</string>
    <string name="wrong_date_range">Wrong date range</string>
    <string name="not_found_data">Not found data</string>
    <string name="statistics">Statistics</string>
    <string name="refresh">Refresh</string>
    <string name="date">Date</string>
    <string name="production">Production</string>
    <string name="weather">Weather</string>
    <string name="total_production">Total production</string>
    <string name="last_updated">Last updated</string>
    <string name="power">Power (W)</string>
    <string name="today_production">Today production</string>
    <string name="start_production">Start production</string>
    <string name="max_power">Max power</string>
    <string name="avg_power">Avg Power</string>
    <string name="max_power_date">Date of the max power</string>
    <string name="sunrise">Sunrise</string>
    <string name="sunset">Sunset</string>
    <string name="max">Max</string>
    <string name="avg">Avg</string>
    <string name="day_info">Day info</string>
    <string name="details">Details</string>
    <string name="inverter">Inverter</string>
</resources>